--- a/app/src/main/res/layout/pop_up_dialog.xml
+++ b/app/src/main/res/layout/pop_up_dialog.xml
@@ -149,7 +149,7 @@
                 android:focusableInTouchMode="false"
                 android:hint="Select Address"
                 android:maxLines="3"
-                
+
                 android:padding="@dimen/_5sdp"
                 app:edittextfont="Raleway-Regular.ttf" />
 
@@ -160,10 +160,12 @@
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             android:background="@drawable/button_border_green"
             android:gravity="center"
-            android:padding="@dimen/_10sdp"
             android:text="Confirm"
             android:textAllCaps="true"
             android:textColor="@color/white"
