--- a/app/src/main/res/layout/activity_check_out.xml
+++ b/app/src/main/res/layout/activity_check_out.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/activityBackground"
+    android:background="@color/white"
     android:focusable="true"
     android:focusableInTouchMode="true"
     tools:context="com.yberry.dinehawaii.Customer.Activity.CheckOutActivity">
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:layout_marginBottom="@dimen/_40sdp">
+        android:layout_marginBottom="@dimen/_40sdp"
+        android:scrollbars="none">
 
         <RelativeLayout
             android:id="@+id/mainCheckout"
@@ -191,7 +192,7 @@
                     android:layout_marginLeft="@dimen/_20sdp"
                     android:layout_marginRight="@dimen/_20sdp"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:background="#fdfdfd"
+                    android:background="@drawable/bgrectangle"
                     android:orientation="horizontal"
                     android:visibility="gone"
                     android:weightSum="1">
@@ -215,10 +216,10 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_weight="0.2"
-                        android:background="#6ce4dfdf"
+                        android:background="@color/gray_transparent"
                         android:text="apply"
                         android:textAllCaps="true"
-                        app:edittextfont="Raleway-Bold.ttf" />
+                        app:edittextfont="@string/raleway_regular" />/>
 
                     <com.yberry.dinehawaii.customview.CustomButton
                         android:id="@+id/removepoints"
@@ -227,11 +228,11 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_weight="0.2"
-                        android:background="#6ce4dfdf"
+                        android:background="@color/gray_transparent"
                         android:text="reset"
                         android:textAllCaps="true"
                         android:visibility="gone"
-                        app:edittextfont="Raleway-Bold.ttf" />
+                        app:edittextfont="@string/raleway_regular" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -279,7 +280,7 @@
                     android:layout_marginLeft="@dimen/_20sdp"
                     android:layout_marginRight="@dimen/_20sdp"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:background="#fdfdfd"
+                    android:background="@drawable/bgrectangle"
                     android:orientation="horizontal"
                     android:visibility="gone"
                     android:weightSum="1">
@@ -305,10 +306,10 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_weight="0.2"
-                        android:background="#6ce4dfdf"
+                        android:background="@color/gray_transparent"
                         android:text="apply"
                         android:textAllCaps="true"
-                        app:edittextfont="Raleway-Bold.ttf" />
+                        app:edittextfont="@string/raleway_regular" />
 
                     <com.yberry.dinehawaii.customview.CustomButton
                         android:id="@+id/removeEgift"
@@ -317,13 +318,13 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_weight="0.2"
-                        android:background="#6ce4dfdf"
+                        android:background="@color/gray_transparent"
                         android:text="reset"
                         android:textAllCaps="true"
                         android:visibility="gone"
-                        app:edittextfont="Raleway-Bold.ttf" />
+                        app:edittextfont="@string/raleway_regular" />
                 </LinearLayout>
-                f
+
 
                 <LinearLayout
                     android:id="@+id/relcoupon"
@@ -332,7 +333,7 @@
                     android:layout_marginLeft="@dimen/_20sdp"
                     android:layout_marginRight="@dimen/_20sdp"
                     android:layout_marginTop="@dimen/_8sdp"
-                    android:background="#fdfdfd"
+                    android:background="@drawable/bgrectangle"
                     android:orientation="horizontal"
                     android:visibility="gone"
                     android:weightSum="1">
@@ -358,10 +359,10 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_weight="0.2"
-                        android:background="#6ce4dfdf"
+                        android:background="@color/gray_transparent"
                         android:text="apply"
                         android:textAllCaps="true"
-                        app:edittextfont="Raleway-Bold.ttf" />
+                        app:edittextfont="@string/raleway_regular" />
 
                     <com.yberry.dinehawaii.customview.CustomButton
                         android:id="@+id/removecoupon"
@@ -370,11 +371,11 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_weight="0.2"
-                        android:background="#6ce4dfdf"
+                        android:background="@color/gray_transparent"
                         android:text="reset"
                         android:textAllCaps="true"
                         android:visibility="gone"
-                        app:edittextfont="Raleway-Bold.ttf" />
+                        app:edittextfont="@string/raleway_regular" />
                 </LinearLayout>
 
 
@@ -474,7 +475,8 @@
                     android:id="@+id/cust1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal"
                     android:visibility="gone"
@@ -494,7 +496,7 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.1"
                         android:gravity="center"
                         android:text=":"
                         app:edittextfont="Raleway-Regular.ttf" />
@@ -504,12 +506,12 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.6"
                         android:background="@null"
                         android:focusable="true"
                         android:singleLine="true"
                         android:text=""
-                        app:edittextfont="Raleway-Regular.ttf" />
+                        app:edittextfont="@string/raleway_bold" />
 
                 </LinearLayout>
 
@@ -517,7 +519,8 @@
                     android:id="@+id/cust2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal"
                     android:visibility="gone"
@@ -537,7 +540,7 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.1"
                         android:gravity="center"
                         android:text=":"
                         app:edittextfont="Raleway-Regular.ttf" />
@@ -547,9 +550,9 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.6"
                         android:text=""
-                        app:edittextfont="Raleway-Regular.ttf" />
+                        app:edittextfont="@string/raleway_bold"/>
 
                 </LinearLayout>
 
@@ -557,7 +560,8 @@
                     android:id="@+id/cust3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal"
                     android:visibility="gone"
@@ -568,7 +572,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.3"
-                        android:text="Address"
+                        android:text="Delivery Address"
                         app:edittextfont="Raleway-Regular.ttf"
 
                         />
@@ -577,7 +581,7 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.1"
                         android:gravity="center"
                         android:text=":"
                         app:edittextfont="Raleway-Regular.ttf" />
@@ -587,10 +591,10 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.6"
                         android:maxLines="2"
                         android:text=""
-                        app:edittextfont="Raleway-Regular.ttf" />
+                        app:edittextfont="@string/raleway_bold" />
 
                 </LinearLayout>
 
@@ -598,7 +602,8 @@
                     android:id="@+id/cust4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal"
                     android:visibility="gone"
@@ -609,7 +614,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.3"
-                        android:text="Time"
+                        android:text="Pick-up Time"
                         app:edittextfont="Raleway-Regular.ttf"
 
                         />
@@ -618,7 +623,7 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.1"
                         android:gravity="center"
                         android:text=":"
                         app:edittextfont="Raleway-Regular.ttf" />
@@ -628,9 +633,9 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.6"
                         android:text=""
-                        app:edittextfont="Raleway-Regular.ttf" />
+                        app:edittextfont="@string/raleway_bold" />
 
                 </LinearLayout>
 
@@ -638,7 +643,8 @@
                     android:id="@+id/cust5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal"
                     android:visibility="gone"
@@ -649,7 +655,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.3"
-                        android:text="Date"
+                        android:text="Pick-up Date"
                         app:edittextfont="Raleway-Regular.ttf"
 
                         />
@@ -658,7 +664,7 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.1"
                         android:gravity="center"
                         android:text=":"
                         app:edittextfont="Raleway-Regular.ttf" />
@@ -668,9 +674,9 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.6"
                         android:text=""
-                        app:edittextfont="Raleway-Regular.ttf" />
+                        app:edittextfont="@string/raleway_bold" />
 
                 </LinearLayout>
 
@@ -678,7 +684,8 @@
                     android:id="@+id/prepLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal"
                     android:visibility="gone"
@@ -689,7 +696,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.3"
-                        android:text="Prepration Time"
+                        android:text="Preparation Time"
                         app:edittextfont="Raleway-Regular.ttf"
 
                         />
@@ -698,7 +705,7 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.1"
                         android:gravity="center"
                         android:text=":"
                         app:edittextfont="Raleway-Regular.ttf" />
@@ -708,9 +715,9 @@
                         style="@style/TextAppearance.AppCompat.Small"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
+                        android:layout_weight="0.6"
                         android:text=""
-                        app:edittextfont="Raleway-Regular.ttf" />
+                        app:edittextfont="@string/raleway_bold" />
 
                 </LinearLayout>
 
@@ -724,9 +731,11 @@
                 android:orientation="vertical">
 
                 <View
+                    android:id="@+id/divideLine"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/colorDivider" />
+                    android:background="@color/colorDivider"
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
