--- a/app/src/main/res/layout/paypal_order_payment_view.xml
+++ b/app/src/main/res/layout/paypal_order_payment_view.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:gravity="center"
             android:lineSpacingExtra="10dp"
-            android:text="Please select the paypal link below to initial paypal payment for your order grand total.you may log into your paypal account or make payment using your credit card or bank account."
+            android:text="Please select the paypal link below to initiate payment for your order .you may login to your paypal account or make payment using your credit card or bank account."
             android:textColor="@color/blue"
             app:edittextfont="@string/raleway_regular" />
 
