--- a/app/src/main/res/layout/activity_text_view_with_edit_text_adapter.xml
+++ b/app/src/main/res/layout/activity_text_view_with_edit_text_adapter.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context="com.yberry.dinehawaii.adapter.TextViewWithEditTextAdapter">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
