--- a/app/src/main/res/layout/check_box_items.xml
+++ b/app/src/main/res/layout/check_box_items.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_text_view_with_edit_text_adapter"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="vertical"
-    tools:context="com.yberry.dinehawaii.adapter.TextViewWithEditTextAdapter">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
