--- a/app/src/main/res/layout/activity_vendor_item_list.xml
+++ b/app/src/main/res/layout/activity_vendor_item_list.xml
@@ -18,6 +18,7 @@
         android:layout_margin="@dimen/_20sdp"
         android:background="@drawable/text_background"
         android:paddingBottom="@dimen/_5sdp"
+        android:layout_below="@id/tool_bar"
         android:paddingLeft="@dimen/_10sdp"
         android:paddingRight="@dimen/_10sdp"
         android:paddingTop="@dimen/_5sdp"
