--- a/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
+++ b/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
@@ -109,6 +109,7 @@
         <LinearLayout
             android:id="@+id/llcolumns"
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -155,6 +156,7 @@
         </LinearLayout>
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
+            android:visibility="gone"
             android:layout_height="wrap_content">
 
             <LinearLayout
