--- a/app/src/main/res/layout/vendor_bid_cart_item_layout.xml
+++ b/app/src/main/res/layout/vendor_bid_cart_item_layout.xml
@@ -150,6 +150,39 @@
                 app:edittextfont="Raleway-Regular.ttf" />
         </LinearLayout>
 
+
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorDivider" />
+
+        <LinearLayout
+
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/_3sdp"
+            android:paddingTop="@dimen/_3sdp">
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="$"
+                app:edittextfont="Raleway-Regular.ttf" />
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvItemTotalPrice"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:text="0"
+                app:edittextfont="Raleway-Regular.ttf" />
+        </LinearLayout>
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -195,38 +228,6 @@
                     android:paddingTop="@dimen/_3sdp"
                     android:singleLine="true" />
             </RelativeLayout>
-        </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorDivider" />
-
-        <LinearLayout
-
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:gravity="right"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/_3sdp"
-            android:paddingTop="@dimen/_3sdp">
-
-            <com.yberry.dinehawaii.customview.CustomTextView
-                style="@style/TextAppearance.AppCompat.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$"
-                app:edittextfont="Raleway-Regular.ttf" />
-
-            <com.yberry.dinehawaii.customview.CustomTextView
-                android:id="@+id/tvItemTotalPrice"
-                style="@style/TextAppearance.AppCompat.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:text="0"
-                app:edittextfont="Raleway-Regular.ttf" />
         </LinearLayout>
 
 
