--- a/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
+++ b/app/src/main/res/layout/vendor_orderhist_adapter_layout.xml
@@ -143,7 +143,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="right"
                         android:padding="@dimen/_2sdp"
-                        android:text="Price"
+                        android:text="Quantity"
                         app:edittextfont="Raleway-Bold.ttf" />
                 </LinearLayout>
 
